# AgentStockBenchmarkResults

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
accounting/: latest_metrics.csv
accounting/daily_pnl/: 20260517__Anthropic__Haiku4_5__LinearNeutral.csv  20260517__Anthropic__Opus4_6__LinearNeutral.csv  20260517__Anthropic__Opus4_7__LinearNeutral.csv  20260517__Anthropic__Opus4_8__LinearNeutral.csv  20260517__Anthropic__Sonnet4_6__LinearNeutral.csv  20260517__Google__Gemini2_5Flash__LinearNeutral.csv  20260517__Google__Gemini2_5Pro__LinearNeutral.csv  20260517__Google__Gemini3Flash__LinearNeutral.csv  20260517__Google__Gemini3_1Pro__LinearNeutral.csv  20260517__OpenAI__GPT4o__LinearNeutral.csv  20260517__OpenAI__GPT5_3_Codex__LinearNeutral.csv  (+5 more)
curiosity_long_horizon/: run_analysis.py
daily_digest/: 20260521.md  20260521_CN.md  20260522.md  20260522_CN.md  20260526.md  20260526_CN.md  20260527.md  20260527_CN.md  20260528.md  20260528_CN.md  20260530.md  20260530_CN.md  20260601.md  20260601_CN.md  20260603.md  20260603_CN.md  20260604.md  20260604_CN.md  20260605.md  20260605_CN.md  20260606.md  20260606_CN.md  20260608.md  20260608_CN.md  20260609.md  20260609_CN.md  20260610.md  20260610_CN.md  20260615.md  20260615_CN.md  weekly_20260522.md  weekly_20260522_CN.md  weekly_20260526.md  weekly_20260526_CN.md
leaderboard/: leaderboard.csv  leaderboard.html  leaderboard.md
manifests/: strategies.json
prompts/: .gitignore
scripts/: curiosity_stepwise.py  generate_daily_digest.py  generate_pnl_plot.py  visualize_portfolio_ladder.py
(+3131 files in other folders)
